Check in changes before pull

--- a/interface/themes/tabs_style_full.css
+++ b/interface/themes/tabs_style_full.css
@@ -312,6 +312,13 @@ div.closeDlgIframe:before {
     color: #ff5d5a;
 }
 
+img.patientImage {
+    width: 30pt;
+    height: 30pt;
+    position: absolute;
+    left: 50pt;
+}
+
 .top {
     vertical-align:top;
 }
